[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Fonts/Ayar/Ayar/ayar.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UI_Elements/Text_Faces/laima.png" type="Texture" id=2]
[ext_resource path="res://UI/Scenes/TextSystem.gd" type="Script" id=3]
[ext_resource path="res://UI/Fonts/Ayar/Ayar/Ayar-Takhu/ayar_takhu.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 5
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "IDLE"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 1
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 1 )

[node name="TextSystem" type="CanvasLayer"]
layer = 10
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.004
anchor_bottom = 1.0
margin_right = -0.0960693

[node name="TextFace" type="Sprite" parent="Control"]
position = Vector2( 370, 603 )
rotation = -3.14159
scale = Vector2( 3, -3 )
texture = ExtResource( 2 )
normal_map = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextFace"]

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.038
anchor_top = 0.713
anchor_right = 0.966
anchor_bottom = 0.985
margin_left = -0.064003
margin_top = 0.199951
margin_right = -0.0480347
margin_bottom = -6.10352e-05

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_right = 1908.0
margin_bottom = 326.0

[node name="HSplitContainer" type="HSplitContainer" parent="Control/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 0.982
margin_left = 12.0
margin_top = 50.0
margin_right = -23.0
margin_bottom = -0.131989
split_offset = 950

[node name="TextBox" type="Label" parent="Control/MarginContainer/Panel/HSplitContainer"]
margin_right = 1834.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "    Lorem ipsum dolor sit amet, c"
autowrap = true

[node name="Finished" type="Label" parent="Control/MarginContainer/Panel/HSplitContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 906.0
margin_top = 81.0
margin_right = 933.0
margin_bottom = 143.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "V"
align = 1
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/Panel/HSplitContainer/Finished"]
anims/IDLE = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="SpeakerBox" type="Label" parent="Control/MarginContainer/Panel"]
anchor_top = -0.166
anchor_right = 0.356
anchor_bottom = 0.215
margin_left = 15.0
margin_top = 0.0580006
margin_right = -150.692
margin_bottom = -0.0450058
custom_fonts/font = SubResource( 2 )
text = "SPEAKER"

[node name="Tween" type="Tween" parent="Control"]

[connection signal="tween_completed" from="Control/Tween" to="." method="_on_Tween_tween_completed"]
